--- a/reduxReact/src/cssModule/cart.module.css
+++ b/reduxReact/src/cssModule/cart.module.css
@@ -145,21 +145,29 @@
 
 /* Loading */
 .loading {
-  min-height: 150px;
-  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  /* background-color: rgba(255, 255, 255, 0.85); */
+  /* z-index: 1000; */
+
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 100px;
+  flex-direction: column;
 }
+
 
 .loadingName {
   font-size: 20px;
-  font-weight: 600;
+  font-weight: bold;
   color: blue;
   margin-top: 10px;
+  margin-left:14px;
 }
+
 .cartContainer {
   display: flex;
   justify-content: space-between;
